[workspace.package]
version = "0.3.3"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.84.0"
repository = "https://github.com/near/read-rpc"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

# A much faster to compile version of `release`, for development use.
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
debug-assertions = true

[workspace]
resolver = "2"
members = [
    "cache-storage",
    "configuration",
    "database",
    "perf-testing",
    "readnode-primitives",
    "rpc-server",
    "logic-state-indexer",
    "state-indexer",
    "tx-details-storage",
    "tx-indexer",
]

[workspace.dependencies]

cache-storage = { path = "cache-storage" }
configuration = { path = "configuration" }
database = { path = "database" }
readnode-primitives = { path = "readnode-primitives" }
tx-details-storage = { path = "tx-details-storage" }
logic-state-indexer = { path = "logic-state-indexer" }

# Please, update the supported nearcore version in .cargo/config.toml file
near-async = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-primitives = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-chain-configs = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-crypto = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-jsonrpc = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-parameters = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-vm-runner = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" , features = [
    "wasmer0_vm",
    "wasmer2_vm",
    "wasmtime_vm",
    "near_vm",
] }

near-jsonrpc-client = { git = 'https://github.com/kobayurii/near-jsonrpc-client-rs.git', branch = 'fork/0.16.0' }
near-lake-framework = { git = 'https://github.com/kobayurii/near-lake-framework-rs.git', branch = 'fork/0.7.13' }
