[package]
name = "cache-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
borsh = "1.5.1"
futures = "0.3.5"
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.85"

readnode-primitives.workspace = true
near-indexer-primitives.workspace = true
