[package]
name = "cache-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = "0.3.5"
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

readnode-primitives.workspace = true
near-indexer-primitives.workspace = true
