[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
aws-credential-types = "1.1.4"
aws-sdk-s3 = { version = "1.14.0", features = ["behavior-version-latest"] }
aws-types = "1.1.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
project-root = "0.2.2"
regex = "1.10.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18", features = [
    "rt-tokio-current-thread",
    "collector_client",
    "isahc_collector_client",
], optional = true }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.15", features = [
    "fmt",
    "env-filter",
    "std",
    "json",
] }
tracing-opentelemetry = { version = "0.19", optional = true }
tracing-stackdriver = "0.7.2" # GCP logs

near-lake-framework = "0.7.7"

[features]
tracing-instrumentation = ["dep:opentelemetry-jaeger", "dep:tracing-opentelemetry"]
