[package]
name = "configuration"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.108"
validator = { version = "0.19.0", features = ["derive"] }
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18", features = [
    "rt-tokio-current-thread",
    "collector_client",
    "isahc_collector_client",
], optional = true }
openssl = "0.10.68"
scylla = { version = "0.15.1", features = ["ssl", "full-serialization"] }
toml = "0.8.4"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.15", features = [
    "fmt",
    "env-filter",
    "std",
    "json",
] }
tracing-opentelemetry = { version = "0.19", optional = true }
tracing-stackdriver = "0.7.2" # GCP logs
ureq = "2.9" # for downloading genesis config
url = "2.5.0"

near-chain-configs.workspace = true
near-primitives.workspace = true
near-lake-framework.workspace = true

[features]
tracing-instrumentation = [
    "dep:opentelemetry-jaeger",
    "dep:tracing-opentelemetry",
]
