[package]
name = "database-new"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.66"
bigdecimal = "0.3.0" # Dependency of sqlx-core and sqlx-postgres is version 0.3.0
borsh = "1.5.1"
futures = "0.3.5"
hex = "0.4.3"
lazy_static = "1.4.0"
prometheus = "0.13.4"
serde_json = "1.0.117"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
    "bigdecimal"] }

configuration.workspace = true
readnode-primitives.workspace = true

near-chain-configs.workspace = true
near-primitives.workspace = true
near-crypto.workspace = true
near-indexer-primitives.workspace = true
