[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.66"
bigdecimal = { version = "0.4.2", optional = true }
borsh = "0.10.2"
diesel = { version = "2.1.3", features = ["postgres", "numeric", "serde_json"], optional = true }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"], optional = true }
futures = "0.3.5"
hex = "0.4.3"
prettytable-rs = { version = "0.10", optional = true }
num-bigint = { version = "0.3", optional = true }
num-traits = { version = "0.2.15", optional = true }
scylla = { version = "0.9.0", optional = true }
serde = { version = "1.0.145", features = ["derive"], optional = true }
serde_json = { version = "1.0.85", optional = true }
tokio = { version = "1.19.2", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.34"
uuid = { version = "1.3.0", optional = true }

readnode-primitives = { path = "../readnode-primitives" }

near-primitives = "1.36.0"
near-crypto = "1.36.0"
near-indexer-primitives = "1.36.0"

[features]
default = ["scylla_db"]
postgres_db = ["dep:diesel", "dep:diesel-async", "dep:bigdecimal", "dep:serde", "dep:serde_json"]
scylla_db = ["dep:scylla", "dep:num-bigint", "dep:num-traits"]
scylla_db_tracing = ["dep:prettytable-rs", "dep:uuid", "scylla_db"]
account_access_keys = []
