[package]
name = "database"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.66"
bigdecimal = { version = "0.4.2", optional = true }
borsh = "1.3.1"
bytes = "1.5.0"
diesel = { version = "2.1.3", features = ["postgres", "numeric", "serde_json"], optional = true }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"], optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
futures = "0.3.5"
hex = "0.4.3"
prettytable-rs = { version = "0.10", optional = true }
lazy_static = "1.4.0"
num-bigint = { version = "0.4.4", optional = true }
num-traits = { version = "0.2.15", optional = true }
prometheus = "0.13.1"
scylla = { version = "0.12.0", features = ["full-serialization"], optional = true }
scylla-cql = { version = "0.1.0", optional = true }
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.34"
uuid = { version = "1.7.0", optional = true }

configuration.workspace = true
readnode-primitives.workspace = true

near-chain-configs.workspace = true
near-primitives.workspace = true
near-crypto.workspace = true
near-indexer-primitives.workspace = true

[features]
default = ["scylla_db"]
postgres_db = ["dep:diesel", "dep:diesel-async", "dep:diesel_migrations", "dep:bigdecimal"]
scylla_db = ["dep:scylla", "dep:scylla-cql", "dep:num-bigint", "dep:num-traits"]
scylla_db_tracing = ["dep:prettytable-rs", "dep:uuid", "scylla_db"]
account_access_keys = []
