[package]
name = "epoch-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
clap = "4.4.18"
futures = "0.3.5"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.34"

configuration = { path = "../configuration" }
database = { path = "../database" }
readnode-primitives = { path = "../readnode-primitives" }

near-jsonrpc-client = "0.8.0"
near-chain-configs = "0.20.0"
near-indexer-primitives = "0.20.0"
near-lake-framework = "0.7.7"

[features]
default = ["scylla_db"]
postgres_db = ["database/postgres_db"]
scylla_db = ["database/scylla_db"]
scylla_db_tracing = ["database/scylla_db_tracing", "scylla_db"]
