[package]
name = "epoch-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
futures = "0.3.5"
tokio = { version = "1.28.2", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.34"

configuration = { path = "../configuration" }
database = { path = "../database" }
readnode-primitives = { path = "../readnode-primitives" }

near-jsonrpc-client = "0.7.0"
near-chain-configs = "1.36.0"
near-indexer-primitives = "1.36.0"
near-lake-framework = { path = '../../near-lake-framework-rs' }

[features]
default = ["scylla_db"]
postgres_db = ["database/postgres_db"]
scylla_db = ["database/scylla_db"]
scylla_db_tracing = ["database/scylla_db_tracing", "scylla_db"]
