[package]
name = "epoch-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
clap = "4.4.18"
futures = "0.3.30"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.34"

configuration.workspace = true
database.workspace = true
readnode-primitives.workspace = true

near-jsonrpc-client.workspace = true
near-chain-configs.workspace = true
near-indexer-primitives.workspace = true
near-lake-framework.workspace = true

#[features]
#default = ["scylla_db"]
#postgres_db = ["database/postgres_db"]
#scylla_db = ["database/scylla_db"]
#scylla_db_tracing = ["database/scylla_db_tracing", "scylla_db"]
