[package]
name = "load-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
dotenv = "0.15"
futures = "0.3.28"
rand = "0.8"
tokio = { version = "1.28.2", features = ["full", "tracing"] }

near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-primitives = "0.17.0"
