[package]
name = "logic-state-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.70"
borsh = "1.3.1"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.5"
hex = "0.4.3"
humantime = "2.1.0"
lazy_static = "1.4.0"
prometheus = "0.13.1"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-retry = "0.3"
tracing = "0.1.34"

configuration.workspace = true
database.workspace = true
readnode-primitives.workspace = true
near-primitives.workspace = true
near-indexer-primitives.workspace = true
near-jsonrpc-client.workspace = true
near-chain-configs.workspace = true

[features]
tracing-instrumentation = ["configuration/tracing-instrumentation"]
