[package]
name = "near-state-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
anyhow = "1.0.51"
rustc_version = "0.4"

[dependencies]
actix = "0.13.3"
actix-web = "4.2.1"
anyhow = "1.0.70"
clap = "4.4.18"
futures = "0.3.5"
openssl-probe = "0.1.5"
once_cell = "1.19.0"
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.64"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1"
tracing = "0.1.34"

configuration.workspace = true
database.workspace = true
logic-state-indexer.workspace = true

near-o11y.workspace = true
near-chain-configs.workspace = true
near-client.workspace = true
near-indexer.workspace = true
near-indexer-primitives.workspace = true

[features]
tracing-instrumentation = ["configuration/tracing-instrumentation"]
