[package]
name = "optimistic-sync"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.81"
lazy_static = "1.4.0"
prometheus = "0.13.1"
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }

near-jsonrpc-client.workspace = true
near-primitives.workspace = true
