[package]
name = "perf-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["color", "derive", "env"] }
dotenv = "0.15"
futures = "0.3.30"
http = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = "0.1.40"

near-jsonrpc-client = "0.8.0"
near-jsonrpc-primitives = "0.20.0"
near-primitives = "0.20.0"
