[package]
name = "perf-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["color", "derive", "env"] }
dotenv = "0.15"
futures = "0.3.28"
http = "0.2.8"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.34"

near-jsonrpc-client = "0.7.0"
near-jsonrpc-primitives = "1.36.0"
near-primitives = "1.36.0"
