[package]
name = "perf-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
clap = { version = "4.4.18", features = ["color", "derive", "env"] }
dotenv = "0.15"
futures = "0.3.28"
http = "1.0.0"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.34"

near-jsonrpc-client = "0.8.0"
near-jsonrpc-primitives = "0.20.0"
near-primitives = "0.20.0"
