[package]
name = "readnode-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
borsh = "0.10.2"
num-bigint = "0.3"
num-traits = "0.2.15"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

#near-chain-configs = "1.36.0"
near-chain-configs = { git = 'https://github.com/kobayurii/nearcore.git', branch = 'indexer' }
#near-indexer-primitives = "1.36.0"
near-indexer-primitives = { git = 'https://github.com/kobayurii/nearcore.git', branch = 'indexer' }
