[package]
name = "readnode-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
borsh = "1.3.1"
num-traits = "0.2.15"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

near-chain-configs.workspace = true
near-indexer-primitives.workspace = true
