[package]
name = "readnode-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
borsh = "1.3.1"
num-traits = "0.2.15"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

near-indexer-primitives.workspace = true
# We keep the versions of the near-indexer-primitives to support the backward compatibility
near-indexer-primitives-0-20-1 = { version = "0.20.1", package = "near-indexer-primitives" }
near-indexer-primitives-0-21-2 = { version = "0.21.2", package = "near-indexer-primitives" }
near-indexer-primitives-0-22-0 = { version = "0.22.0", package = "near-indexer-primitives" }
near-indexer-primitives-0-23-0 = { version = "0.23.0", package = "near-indexer-primitives" }

# If borsh deserialize is broken, add this version and create new structure
#near-indexer-primitives-0-24-0 = { version = "0.24.0", package = "near-indexer-primitives" }
