[package]
name = "read-rpc-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
anyhow = "1.0.51"
rustc_version = "0.4"

[dependencies]
actix-http = "3.6.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
anyhow = "1.0.70"
assert-json-diff = { version = "2.0.2", optional = true }
borsh = "1.3.1"
chrono = "0.4.19"
erased-serde = "0.4.2"
futures = "0.3.24"
futures-locks = "0.7.1"
hex = "0.4.3"
lazy_static = "1.4.0"
lru = "0.12.2"
mimalloc = { version = "0.1.41", default-features = false }
prometheus = "0.13.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.40"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.12" }
tracing = { version = "0.1.36", features = ["std"] }
tracing-actix-web = "0.7.9"

cache-storage.workspace = true
configuration.workspace = true
database.workspace = true
readnode-primitives.workspace = true
tx-details-storage.workspace = true

near-async.workspace = true
near-chain-configs.workspace = true
near-crypto.workspace = true
near-jsonrpc.workspace = true
near-jsonrpc-client.workspace = true
near-indexer-primitives.workspace = true
near-lake-framework.workspace = true
near-primitives.workspace = true
near-parameters.workspace = true
near-vm-runner.workspace = true

[features]
default = []
tracing-instrumentation = ["configuration/tracing-instrumentation"]
shadow-data-consistency = ["dep:assert-json-diff"]
detailed-status-codes = []
