[package]
name = "scylla-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
borsh = "1.3.1"
bigdecimal = "0.4.2"
clap = "4.4.18"
futures = "0.3.5"
hex = "0.4.3"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
num-bigint = "0.4.4"
num-traits = "0.2.15"
scylla = { version = "0.12.0", features = ["full-serialization"] }

configuration.workspace = true
database.workspace = true

[features]
default = ["postgres_db"]
tracing-instrumentation = ["configuration/tracing-instrumentation"]
postgres_db = ["database/postgres_db"]
scylla_db = ["database/scylla_db"]
scylla_db_tracing = ["database/scylla_db_tracing", "scylla_db"]
account_access_keys = ["database/account_access_keys"]
