[package]
name = "state-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
anyhow = "1.0.51"
rustc_version = "0.4"

[dependencies]
anyhow = "1.0.70"
clap = "4.4.18"
futures = "0.3.5"
openssl-probe = "0.1.5"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1"
tracing = "0.1.34"

configuration.workspace = true
database.workspace = true
logic-state-indexer.workspace = true

near-jsonrpc-client.workspace = true
near-lake-framework.workspace = true

[features]
default = []
tracing-instrumentation = ["configuration/tracing-instrumentation"]
