[package]
name = "tx-details-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-sdk-s3 = { version = "1.68.0", features = ["behavior-version-latest"]  }
