[package]
name = "tx-details-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bigdecimal = "0.4.7"
futures = "0.3.31"
scylla = { version = "0.15.1", features = ["full-serialization"] }

readnode-primitives.workspace = true
