[package]
name = "tx-details-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
anyhow = "1.0.70"
bigdecimal = "0.4"
num-bigint = "0.3.3"
num-traits = "0.2.19"
futures = "0.3.31"
scylla = { version = "0.15.1", features = ["ssl", "full-serialization"] }

database.workspace = true
near-primitives.workspace = true
readnode-primitives.workspace = true
